--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -615,7 +615,7 @@
               background: "-webkit-radial-gradient(blue, yellow, red, green)" 
             });
           }
-          $(element).css('border-radius', '6px'); // para deixar os cantos arredondados
+          //$(element).css('border-radius', '6px'); // para deixar os cantos arredondados
 
         },
         {% comment %} disabledDays: [], // Não estou usando por enquanto. {% endcomment %}
