--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -373,8 +373,11 @@
 
     // Função para tratar edição de evento
     function editEvent(event) {
-      if(event.events.length) { // não vazia
-        evento = event.events[0];
+
+      var evento = null;
+
+      if (event.constructor.name=="Event" && event.events.length) { // não vazia
+          evento = event.events[0];
       } else {
         evento = event;
       }
@@ -534,6 +537,33 @@
                 color: "{{evento.get_color}}",
             },
           {% endfor %}
+
+          {% for evento in provas %}
+            {
+                id: {{evento.id}},
+                name: "{{evento.get_title}}",
+                location: "{{evento.location}}",
+                observation: "{{evento.observacao}}",
+                type: "{{evento.tipo_de_evento}}",
+                startDate: new Date({{evento.startDate.year}},{{evento.startDate.month|add:-1}},{{evento.startDate.day}}),
+                endDate: new Date({{evento.endDate.year}},{{evento.endDate.month|add:-1}},{{evento.endDate.day}}),
+                color: "{{evento.get_color}}",
+            },
+          {% endfor %}
+       
+          {% for evento in laboratorios %}
+            {
+                id: {{evento.id}},
+                name: "{{evento.get_title}}",
+                location: "{{evento.location}}",
+                observation: "{{evento.observacao}}",
+                type: "{{evento.tipo_de_evento}}",
+                startDate: new Date({{evento.startDate.year}},{{evento.startDate.month|add:-1}},{{evento.startDate.day}}),
+                endDate: new Date({{evento.endDate.year}},{{evento.endDate.month|add:-1}},{{evento.endDate.day}}),
+                color: "{{evento.get_color}}",
+            },
+          {% endfor %}
+
       ];
 
       var dataEventosOrganizacao = [
@@ -562,32 +592,19 @@
     var currentDate = new Date().getDate();
     var hoje = new Date(currentYear, currentMonth, currentDate).getTime();
 
-    function provas_labs(element, date) {
+    function dias_especiais(element, date) {
       $(element).css('border-radius', '0px');
+      
       {% if not limpo %}
         if(date.getTime() == hoje) {
           $(element).css('outline', '2px solid blue');
         }
       {% endif %}
+      
       if (date.getDay() === 6 || date.getDay() === 0) {
         $(element).css('background-color', 'lightgrey');  
-      } else {
-        {% for prova in provas %}
-          if(
-            date.getTime() >= new Date({{prova.startDate.year}}, {{prova.startDate.month|add:-1}},{{prova.startDate.day}}).getTime()
-            &&
-            date.getTime() <= new Date({{prova.endDate.year}}, {{prova.endDate.month|add:-1}},{{prova.endDate.day}}).getTime()
-            ) {
-            $(element).css('border-bottom', '4px solid {{prova.get_color}}');
-            $(element).css('line-height', '0.85');
-          }
-        {% endfor %}
-        {% for lab in laboratorios %}
-          if(date.getTime() == new Date({{lab.startDate.year}}, {{lab.startDate.month|add:-1}},{{lab.startDate.day}}).getTime()) {
-            $(element).css('background-image', 'linear-gradient(to bottom, transparent 80%, {{lab.get_color}} 80% )');
-          }
-        {% endfor %}
       }
+
     }
 
     function calendario() {
@@ -598,32 +615,53 @@
         style:'custom',
         customDataSourceRenderer: function(element, date, event) {
           
-          if(event.length==1) {
+          $(element).css('border-radius', '0px');
+
+          var eventos = [];
+
+          for (var i in event) {
+            if(event[i].type == 40 ) { // (40, 'Laboratório', 'orange'),
+              $(element).css('background-image', 'linear-gradient(to bottom, transparent 80%, ' + event[i].color + ' 80% )');
+            } else if(event[i].type == 41 ) { // (41, 'Semana de provas', 'red'),
+              $(element).css('border-bottom', '4px solid ' + event[i].color);
+              $(element).css('line-height', '0.85');
+            } else {
+              eventos.push(event[i]);
+            }
+          }
+
+          if(eventos.length==1) {
            $(element).css({
-              background: event[0].color 
+              background: eventos[0].color 
             });
-          } else if (event.length==2) {
+          } else if (eventos.length==2) {
             $(element).css({
-              background: "-webkit-gradient(linear, left top, right bottom, color-stop(50%," + event[0].color + "), color-stop(50%," + event[1].color + "))" 
+              background: "-webkit-gradient(linear, left top, right bottom, color-stop(50%," + eventos[0].color + "), color-stop(50%," + eventos[1].color + "))" 
             });
-          } else if (event.length==3) {
+          } else if (eventos.length==3) {
             $(element).css({
-              background: "linear-gradient(to right, " + event[0].color + " 33%, " + event[1].color + " 33% 66%, " + event[2].color + " 66%)" 
+              background: "linear-gradient(to right, " + eventos[0].color + " 33%, " + eventos[1].color + " 33% 66%, " + eventos[2].color + " 66%)" 
             });
-          } else {
+          } else if (eventos.length > 3) {
             $(element).css({  // muitas cores
               background: "-webkit-radial-gradient(blue, yellow, red, green)" 
             });
           }
+          
           //$(element).css('border-radius', '6px'); // para deixar os cantos arredondados
 
         },
         {% comment %} disabledDays: [], // Não estou usando por enquanto. {% endcomment %}
-        customDayRenderer: provas_labs,
+        customDayRenderer: dias_especiais,
         {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
           enableRangeSelection: true,
           enableContextMenu: true,  // botão da direita sobre o dia
           contextMenuItems: [
+            {
+              text: 'Editar',
+              click: editEvent
+            }
+            ,
             {
               text: 'Delete',
               click: deleteEvent
@@ -641,7 +679,7 @@
 
               for (var i in e.events) {
                 content += '<div class="event-tooltip-content">' +
-                '<div class="event-name">' + e.events[i].name + '</div>';
+                '<div class="event-name">&#8226; ' + e.events[i].name + '</div>';
                 if (e.events[i].location) {
                   content += '<div class="event-location">' + "Local: " + e.events[i].location + '</div>'
                 }
@@ -693,7 +731,7 @@
           }          
           if($('#academico').is(':checked')) {
             dataEventos = dataEventos.concat(dataEventosAcademicos);
-            calendar.setCustomDayRenderer(provas_labs);
+            calendar.setCustomDayRenderer(dias_especiais);
           } else {
             calendar.setCustomDayRenderer();
           }
