certificado de orientador

--- a/documentos/templates/documentos/gerar_certificados.html
+++ b/documentos/templates/documentos/gerar_certificados.html
@@ -85,7 +85,7 @@
           <a href="
             mailto:{{certificado.usuario.first_name|parse_quote}}%20{{certificado.usuario.last_name|parse_quote}}
             %20&lt;{{certificado.usuario.email|parse_quote }}&gt;,?cc=Luciano%20Pereira%20Soares&lt;lpsoares@insper.edu.br&gt;&amp;subject=Certificado%20Destaque%20PFE&amp;body={{certificado.usuario.first_name|parse_quote}}%20{{certificado.usuario.last_name|parse_quote}},%0D%0A%0D%0Aatenciosamente,%20coordenação%20PFE">
-            &#x2709; Enviar certificado
+            &#x2709; Enviar certificado [[[ VELHO VELHO ]]]
           </a>
         </td>
       </tr>
