--- a/estudantes/templates/estudantes/index_estudantes.html
+++ b/estudantes/templates/estudantes/index_estudantes.html
@@ -54,6 +54,11 @@
 
 {% block content %}
 
+    {% if user.tipo_de_usuario == 4 %}
+        <h1>Pedir mais dados dos alunos ???<br>
+        Cuidado com a LGPD, verificar isso.</h1>
+    {% endif %}
+
     {% comment %} MEU PROJETO {% endcomment %}
     {% comment %} Link só irá direto se houver um projeto de estudante, no começo só o interesse por propostas. {% endcomment %}
     <a
