--- a/templates/edicoes.html
+++ b/templates/edicoes.html
@@ -15,4 +15,9 @@
       {% endfor %}
   </select>
 
+  <div class="spinner-border spinner-border-sm text-secondary" id="spinner" style="visibility: hidden" role="status" aria-hidden="true">
+    <span class="sr-only">Carregando...</span>
+  </div>
+  
+
 {% endif %}
